# Pando

./: .gitignore  .nvim.lua  .ok  Cargo.toml  README.md  error.pando  index.html  main.js  package-lock.json  package.json  tsconfig.json
aspen/: Cargo.toml  README.md
aspen/src/: application.rs  blackboard.rs  context.rs  element.rs  geometry.rs  lib.rs  mouse_region.rs  prelude.rs  runner.rs  shaper.rs  test_runner.rs  token.rs  util.rs  winit_renderer.rs  winit_runner.rs
aspen/src/components/: block.rs  board.rs  border.rs  button.rs  editor.rs  mod.rs  resize_handles.rs  text_editor.rs  window_buttons.rs
aspen/src/context_stack/: attached_context.rs  context.rs  draw_context.rs  event_context.rs  event_state.rs  layout_context.rs  mod.rs  update_context.rs
javascript/: index.js
rust/: Cargo.toml
rust/src/: cli.yml  export.rs  generator.rs  lib.rs  operations.rs  parser.rs  tests.rs
src/: abbreviations.rs  app.rs  app_data.rs  canvas.rs  dots.rs  draggable.rs  generator.rs  index.tsx  main.rs  ngs.rs  pando.rs  parser.rs  pinboard.rs  save.rs  tests.rs  todo.rs  util.rs  utils.rs
src-tauri/: tauri.conf.json
src/controllers/: draggable.rs  event_handler.rs  handles_mouse.rs  life_cycle_handler.rs  mod.rs  on_enter.rs  on_mouse_button_down.rs  selection.rs  take_focus.rs  undo_root.rs
src/framework/: context.rs  element.rs  geometry.rs  mod.rs  mouse_region.rs  runner.rs  token.rs
src/framework/components/: background.rs  board.rs  button.rs  mod.rs  resize_handles.rs  text_editor.rs  window_buttons.rs
src/persistence/: mod.rs  v0.rs  v1.rs  v2.rs
src/widgets/: canvas.rs  dot_grid.rs  flow.rs  link_points.rs  mod.rs  pin_board.rs  todo.rs
src/widgets/pinboard/: mod.rs  on_dependent_changed.rs  pinnable.rs  pinnable_widget_ext.rs
