[workspace]
resolver = "2"
members = ["aspen"]
exclude = [".git", "target"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[package]
name = "pando"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aspen = { path = "./aspen" }
bytemuck = { version = "1.14.3", features = ["derive"] }
futures = "0.3"
parking_lot = "0.12.1"
rust-embed = "8.2.0"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
winit = "0.29.10"
mockall = "0.13"
