[package]
name = "aspen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_reflect = "0.17.3"
clipboard-rs = "0.3.1"
futures = "0.3"
mockall = "0.13"
ordered-float = "5.0.0"
parley = "0.7.0"
rust-embed = "8.2.0"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
vello = "0.6.0"
winit = "0.30.10"
