[package]
name = "pando"
version = "0.1.0"
authors = [ "keith <keith@the-simmons.net>" ]
edition = "2018"

[dependencies]
nom = "4.2.0"
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }
web-sys = { version = "0.3.47", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]
